# ai-tools

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
ai-tools-ui/: .dockerignore  Dockerfile  README.md  angular.json  docker-compose.yml  nginx.conf  package-lock.json  package.json
ai-tools-ui/src/: index.html  styles.scss
alembic/: env.py
alembic/versions/: 20260205_01_username_admin_optional_email.py  20260504_01_documents_domain_pgvector.py  20260504_02_document_types_description.py  20260504_03_categories_name_ru.py  20260504_04_categories_description_ru.py  20260505_01_document_statuses.py  20260505_02_document_extract_images.py  20260505_03_document_extract_metadata.py  20260506_01_cleanup_level0_categories.py  20260506_02_sources_document_type.py  20260506_03_sources_last_parse_stats.py  20260508_01_processing_jobs_queue_meta.py  20260512_01_source_parse_runs.py  20260512_02_parse_processing_jobs.py  20260512_03_source_parse_post_parse_options.py  20260514_01_documents_translated_title.py  20260515_01_sources_discovery_paths.py  20260516_01_sources_rss_urls.py  20260517_01_document_embeddings_vector_1024.py  20260518_01_documents_embedding_fps.py  20260519_01_document_embeddings_hnsw_cosine.py  20260520_01_document_chunks_fts.py  20260520_02_rag_queries.py  20260521_01_document_chunk_bm25_terms.py  20260522_01_workbooks.py  20260522_02_workbook_entries.py  20260523_01_workbook_notes_entry_sources.py
app/: main.py
app/admin/: __init__.py  setup.py  views.py
app/api/: deps.py  document_streaming.py  error_mapping.py  sse.py  streaming_utils.py
app/bootstrap/: container.py
benchmarks/: async_openai_sdk.py  test_llm_clients.py
docs/: document-embeddings.md  rag-roadmap.md
scripts/: backfill_bm25_index.py  embedding_integration_test.py  rag_retrieval_test.py
tests/: conftest.py  test_bm25.py  test_discovery_paths.py  test_document_embedding.py  test_embedding_chunking.py  test_parse_source.py  test_parse_source_job_stale.py  test_rag.py  test_rss_urls.py
(+299 files in other folders)
