[project]
name = "ai-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "bs4>=0.0.2",
    "email-validator>=2.0",
    "fastapi>=0.136.1",
    "langdetect>=1.0.9",
    "openai>=2.33.0",
    "playwright>=1.58.0",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.8",
    "requests>=2.33.1",
    "sqlalchemy[asyncio]>=2.0",
    "tiktoken>=0.12.0",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.46.0",
]
